--- a/app/static/css/register.css
+++ b/app/static/css/register.css
@@ -1,34 +1,65 @@
-
 .login-main {
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    width: 350px;
+    width: 380px;
     margin: 0 auto;
+    padding: 40px 24px 32px;
+    box-sizing: border-box;
 }
 
 .login-main header {
-    margin-top: 150px;
-    height: 35px;
-    line-height: 35px;
-    font-size: 30px;
-    font-weight: 100;
+    margin-top: 80px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 28px;
+    font-weight: 500;
     text-align: center;
+    color: #fff;
 }
 
-.login-main header, .login-main form, .login-main form .layui-input-inline {
-    margin-bottom: 15px;
+.login-main form {
+    margin-top: 24px;
+    padding: 24px 26px 18px;
+    background: rgba(255,255,255,0.98);
+    border-radius: 8px;
+    box-shadow: 0 8px 24px rgba(15,35,52,0.18);
 }
 
-.login-main form .layui-input-inline, .login-main form .layui-input-inline input, .login-main form .layui-input-inline button {
+.login-main header,
+.login-main form,
+.login-main form .layui-input-inline {
+    margin-bottom: 16px;
+}
+
+.login-main form .layui-input-inline,
+.login-main form .layui-input-inline input,
+.login-main form .layui-input-inline button {
     width: 100%;
 }
 
 .login-main form .login-btn {
     margin-bottom: 5px;
 }
+
 .fr{
     float: right;
+}
+
+@media screen and (max-width: 480px) {
+    .login-main {
+        width: 100%;
+        padding: 24px 16px 16px;
+    }
+
+    .login-main header {
+        margin-top: 40px;
+        font-size: 24px;
+    }
+
+    .login-main form {
+        padding: 20px 18px 14px;
+    }
 }
