--- a/app/static/css/xadmin.css
+++ b/app/static/css/xadmin.css
@@ -20,7 +20,8 @@ body{
 }
 .login-bg{
     /*background: #eeeeee url() 0 0 no-repeat;*/
-     background:url(../images/demo-1-bg.jpg) no-repeat center;
+     /*background:url(../images/demo-1-bg.jpg) no-repeat center;*/
+    background: #eeeeee;
     background-size: cover;
     overflow: hidden;
 }
@@ -46,7 +47,7 @@ body{
 .login .message {
     margin: 10px 0 0 -58px;
     padding: 18px 10px 18px 60px;
-    background: #189F92;
+    background: #26189f;
     position: relative;
     color: #fff;
     font-size: 16px;
@@ -93,7 +94,7 @@ body{
     vertical-align: middle;
     cursor: pointer;
     color: #ffffff;
-    background-color: #189F92;
+    background-color: #21189f;
     border-radius: 3px;
     border: none;
     -webkit-appearance: none;
@@ -118,10 +119,40 @@ body{
     width: 100%;
 }
 .x-body{
-    padding: 20px;
+    padding: 24px 28px;
+    background-color: #f5f7fa;
+}
+.page-container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.page-header h2{
+    font-size: 20px;
+    font-weight: 500;
+}
+.page-header p{
+    margin-top: 4px;
+    color: #999;
+}
+.filter-card{
+    margin-bottom: 20px;
+}
+.filter-label{
+    display: block;
+    margin-bottom: 4px;
+    font-size: 12px;
+    color: #666;
+}
+.filter-actions{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+}
+.filter-actions .layui-btn{
+    min-width: 90px;
 }
 .x-nav{
-    padding: 0 20px;
+    padding: 0 24px;
     position: relative;
     z-index: 99;
     border-bottom: 1px solid #e5e5e5;
@@ -129,12 +160,12 @@ body{
     height: 39px;
     overflow: hidden;
 }
-xblock{
+.xblock{
     display: block;
     margin-bottom: 10px;
     padding: 5px;
     line-height: 22px;
-    /* border-left: 5px solid #009688; */
+    /* border-left: 5px solid #1E9FFF; */
     border-radius: 0 2px 2px 0;
     background-color: #f2f2f2;
 }
@@ -159,10 +190,10 @@ xblock{
     color: red;
 }
 .x-a{
-    color: #1AA093;
+    color: #053497;
 }
 .x-a:hover{
-    color: #127F74;
+    color: #12357f;
 }
 .x-sort{
     height: 30px;
@@ -174,7 +205,7 @@ xblock{
     margin-top: 0px;
 }
 .layui-input:focus, .layui-textarea:focus {
-    border-color: #189f92!important;
+    border-color: #18269f!important;
 }
 
 .page{
@@ -199,11 +230,11 @@ xblock{
 }
 .page span.current{
     display: inline-block;
-    background: #009688 url() 0 0 no-repeat;
+    background: #1E9FFF url() 0 0 no-repeat;
     color: #fff;
     padding: 10px;
     min-width: 15px;
-    border: 1px solid #009688;
+    border: 1px solid #1E9FFF;
 }
 .page .pagination li{
     display: inline-block;
@@ -211,9 +242,9 @@ xblock{
     text-align: center;
 }
 .page .pagination li.active span{
-    background: #009688 url() 0 0 no-repeat;
+    background: #1E9FFF url() 0 0 no-repeat;
     color: #fff;
-    border: 1px solid #009688;
+    border: 1px solid #1E9FFF;
 
 }
 
@@ -221,16 +252,17 @@ xblock{
 /*头部*/
 .container{
     width: 100%;
-    height: 45px;
-    background-color: #222;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    height: 52px;
+    background: #001529;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
 }
 .container .logo a{
     float: left;
     color: #fff;
     font-size: 18px;
-    padding-left: 20px;
-    line-height: 45px;
+    padding-left: 24px;
+    line-height: 52px;
     width: 200px;
 }
 .container .right{
@@ -239,7 +271,7 @@ xblock{
 
 }
 .container .left_open{
-    height: 45px;
+    height: 52px;
     float: left;
 }
 .container .left_open i{
@@ -251,7 +283,7 @@ xblock{
     line-height: 32px;
     border-radius: 3px;
     text-align: center;
-    margin-top: 7px;
+    margin-top: 10px;
     cursor: pointer;
 }
 .container .left_open i:hover{
@@ -285,34 +317,35 @@ xblock{
 }
 .left-nav{
     position: absolute;
-    top: 46px;
+    top: 52px;
     bottom: 42px;
     left: 0;
     z-index: 2;
     padding-top: 10px;
-    background-color: #EEEEEE;
+    background-color: #001529;
     width: 220px;
     max-width: 220px;
     overflow: auto;
     overflow-x:hidden;
-    border-right: 1px solid #e5e5e5;
+    border-right: 1px solid #001529;
 
     /*width: 0px;*/
 }
 .left-nav #nav li{
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid rgba(255,255,255,0.03);
 }
 .left-nav #nav li:hover > a{
     /*color: blue;*/
 }
 .left-nav #nav .current{
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: #1890ff;
 }
 .left-nav #nav li a{
     font-size: 14px;
-    padding: 10px 15px 10px 20px;
+    padding: 11px 18px 11px 22px;
     display: block;
     cursor: pointer;
+    color: rgba(255,255,255,0.85);
 }
 .left-nav #nav li a cite{
     font-size: 14px;
@@ -335,15 +368,16 @@ xblock{
      /*background: #fff url() 0 0 no-repeat;*/
 }
 .left-nav #nav li .sub-menu li a{
-    padding: 12px 15px 12px 30px;
-    font-size: 14px;
+    padding: 10px 18px 10px 34px;
+    font-size: 13px;
     cursor: pointer;
 }
 .left-nav #nav li .sub-menu li .sub-menu li a{
     padding-left: 45px;
 }
 .left-nav #nav li .sub-menu li a:hover{
-    color: #148cf1;
+    color: #fff;
+    background-color: #1890ff;
 }
 .left-nav #nav li .sub-menu li a i{
     font-size: 12px;
@@ -359,7 +393,8 @@ xblock{
 .x-slide_left {
     width: 17px;
     height: 61px;
-    background: url(../images/icon.png) 0 0 no-repeat;
+    /*background: url(../images/icon.png) 0 0 no-repeat;*/
+    background: #ccc;
     position: absolute;
     top: 200px;
     left: 221px;
@@ -368,7 +403,7 @@ xblock{
 }
 .page-content{
     position: absolute;
-    top: 46px;
+    top: 52px;
     right: 0;
     bottom: 42px;
     left: 221px;
@@ -377,11 +412,11 @@ xblock{
 }
 .page-content-bg{
     position: absolute;
-    top: 46px;
+    top: 52px;
     right: 0;
     bottom: 42px;
     left: 221px;
-    background: rgba(0,0,0,0.5); url() 0 0 no-repeat;
+    background: rgba(0,0,0,0.5);
     overflow: hidden;
     z-index: 100;
     display: none;
@@ -462,7 +497,7 @@ xblock{
     font-style:normal;
     font-size:30px;
     font-weight:300;
-    color:#009688
+    color:#1E9FFF
 }
 .x-admin-backlog-body:hover {
     background-color:#CFCFCF;
@@ -473,6 +508,22 @@ xblock{
 body .layui-layout-admin .footer-demo{height: auto; padding: 15px 0; line-height: 26px;}
 .welcome-footer a{padding: 0 5px;}
 
+/* 统一按钮与绿色背景为蓝色主题，覆盖 layui 默认 #009688 */
+.layui-btn,
+.layui-btn-normal{
+    background-color: #1E9FFF !important;
+    border-color: #1E9FFF !important;
+}
+
+.layui-btn:hover,
+.layui-btn-normal:hover{
+    background-color: #1AA7FF !important;
+    border-color: #1AA7FF !important;
+}
+
+.layui-bg-green{
+    background-color: #1E9FFF !important;
+}
 table th, table td {
     word-break: break-all;
 }
