--- a/app/templates/admin/base_biao.html
+++ b/app/templates/admin/base_biao.html
@@ -1,14 +1,11 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <title>Proudly presented by ECharts</title>
-    {% for jsfile_name in script_list %}
-
-        <script src="{{ host }}/{{ jsfile_name }}.js"></script>
-    {% endfor %}
+    <!-- 本地引入 ECharts，文件需放在 static/assets/js/echarts.min.js -->
+    <script src="{{ url_for('static', filename='assets/js/echarts.min.js') }}"></script>
 </head>
 
 <body>
