--- a/app/templates/admin/categoryOfGoods.html
+++ b/app/templates/admin/categoryOfGoods.html
@@ -1,52 +1,87 @@
 {% extends "admin/bases.html" %}
- {% import "admin/fy.html" as pg %}
+{% import "admin/fy.html" as pg %}
 
 {% block content %}
 
-    
-    <div class="x-body">
-           <div class="layui-row">
-        <form class="layui-form layui-col-md12 x-so" method="post">
-           {{form.goods_name}}
-            {{form.csrf_token}}
-          {{form.submit}}
-        </form>
-      </div>
+    <style>
+        /* 当前页面：去掉左右留白，表格加边框 */
+        .x-body.page-container {
+            margin: 0;
+            max-width: none;
+        }
 
-      <xblock>
+        .goods-table {
+            border: 1px solid #e6e6e6;
+        }
 
-        <button class="layui-btn" onclick="x_admin_show('添加商品名','{{url_for("admin.addTradeName")}}')">添加商品种类名</button>
-      </xblock>
-      <table class="layui-table">
-        <thead>
+        .goods-table th,
+        .goods-table td {
+            border: 1px solid #e6e6e6;
+        }
+    </style>
 
-          <tr>
+    <div class="x-body page-container layui-anim layui-anim-up">
 
-            <th>商品名称</th>
-            <th>价格</th>
-            <th>介绍</th>
-            <th >操作</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for i in page_data.items %}
-          <tr>
+        <div class="layui-row page-header">
+            <div class="layui-col-md8">
+                <h2 style="font-size: 20px; font-weight: 500; margin: 0;">商品信息管理</h2>
+                <p style="color: #999; margin-top: 4px;">维护商品种类、价格与简介信息。</p>
+            </div>
+        </div>
 
-            <td>{{i.goods_name}}</td>
-            <td>{{i.goods_price}}</td>
-            <td>{{i.goods_intro}}</td>
-            <td class="td-manage">
-              <a title="删除" onclick="member_del(this,'{{i.goods_id}}')" href="javascript:;">
-                <i class="layui-icon">&#xe640;</i>
-              </a>
-            </td>
-          </tr>
-        {% endfor %}
-        </tbody>
-      </table>
-        {{pg.page(page_data,'admin.categoryOfGoods')}}
+        <fieldset class="layui-elem-field filter-card" style="margin-top: 16px;">
+            <legend>筛选条件</legend>
+            <div class="layui-field-box">
+                <form class="layui-form layui-row layui-col-space16 x-so" method="post">
+                    <div class="layui-col-md6 layui-col-sm8">
+                        {{form.goods_name}}
+                    </div>
+                    <div class="layui-col-md6 layui-col-sm4 filter-actions">
+                        {{form.csrf_token}}
+                        {{form.submit}}
+                    </div>
+                </form>
+            </div>
+        </fieldset>
+
+        <xblock>
+            <button class="layui-btn" onclick="x_admin_show('添加商品名','{{ url_for('admin.addTradeName') }}')">添加商品种类名</button>
+        </xblock>
+
+        <div class="layui-card">
+            <div class="layui-card-header">商品列表</div>
+            <div class="layui-card-body" style="padding: 0;">
+                <table class="layui-table goods-table" style="margin: 0;">
+                    <thead>
+                        <tr>
+                            <th>商品名称</th>
+                            <th>价格</th>
+                            <th>介绍</th>
+                            <th>操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for i in page_data.items %}
+                        <tr>
+                            <td>{{i.goods_name}}</td>
+                            <td>{{i.goods_price}}</td>
+                            <td>{{i.goods_intro}}</td>
+                            <td class="td-manage">
+                                <a class="layui-btn layui-btn-xs layui-btn-danger" title="删除" onclick="member_del(this,'{{i.goods_id}}')" href="javascript:;">删除</a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div style="margin-top: 15px; text-align: right;">
+            {{pg.page(page_data,'admin.categoryOfGoods')}}
+        </div>
 
     </div>
+
     <script>
       layui.use('laydate', function(){
         var laydate = layui.laydate;
