--- a/app/templates/admin/enteringWarehouse.html
+++ b/app/templates/admin/enteringWarehouse.html
@@ -1,10 +1,25 @@
-
 {% extends "admin/bases.html" %}
  {% import "admin/fy.html" as pg %}
 {% block content %}
 
 
-    <div class="x-body">
+    <style>
+        .x-body.page-container {
+            margin: 0;
+            max-width: none;
+        }
+
+        .entering-table {
+            border: 1px solid #e6e6e6;
+        }
+
+        .entering-table th,
+        .entering-table td {
+            border: 1px solid #e6e6e6;
+        }
+    </style>
+
+    <div class="x-body page-container">
      <div class="layui-row">
                    <form class="layui-form layui-col-md12 x-so" method="post">
             {{form.name}}
@@ -14,7 +29,7 @@
           {{form.submit}}
         </form>
       </div>
-      <table class="layui-table">
+      <table class="layui-table entering-table">
         <thead>
          <tr>
 
@@ -39,9 +54,7 @@
             <td>{{i.inwarehouse_user_name}}</td>
             <td class="td-manage">
 
-              <a title="删除" onclick="member_del(this,'{{i.inwarehouse_id}}')" href="javascript:;">
-                <i class="layui-icon">&#xe640;</i>
-              </a>
+              <a class="layui-btn layui-btn-xs layui-btn-danger" title="删除" onclick="member_del(this,'{{i.inwarehouse_id}}')" href="javascript:;">删除</a>
             </td>
           </tr>
         {% endfor %}
