--- a/app/templates/admin/returnSales.html
+++ b/app/templates/admin/returnSales.html
@@ -1,10 +1,25 @@
-
 {% extends "admin/bases.html" %}
  {% import "admin/fy.html" as pg %}
 {% block content %}
 
 
-    <div class="x-body">
+    <style>
+        .x-body.page-container {
+            margin: 0;
+            max-width: none;
+        }
+
+        .returnsales-table {
+            border: 1px solid #e6e6e6;
+        }
+
+        .returnsales-table th,
+        .returnsales-table td {
+            border: 1px solid #e6e6e6;
+        }
+    </style>
+
+    <div class="x-body page-container">
     <div class="layui-row">
         <form class="layui-form layui-col-md12 x-so" method="post">
            {{form.goods_name}}
@@ -15,7 +30,7 @@
         </form>
       </div>
 
-      <table class="layui-table">
+      <table class="layui-table returnsales-table">
         <thead>
          <tr>
 
@@ -41,9 +56,7 @@
             <td>{{i.sealreturngoods_user_name}}</td>
             <td>{{i.sealreturngoods_addtime}}</td>
             <td class="td-manage">
-              <a title="删除" onclick="member_del(this,'{{i.sealreturngoods_id}}')" href="javascript:;">
-                <i class="layui-icon">&#xe640;</i>
-              </a>
+              <a class="layui-btn layui-btn-xs layui-btn-danger" title="删除" onclick="member_del(this,'{{i.sealreturngoods_id}}')" href="javascript:;">删除</a>
             </td>
           </tr>
         {% endfor %}
