--- a/app/templates/admin/seeWarehouse.html
+++ b/app/templates/admin/seeWarehouse.html
@@ -2,7 +2,22 @@
  {% import "admin/fy.html" as pg %}
 
 {% block content %}
-    <div class="x-body">
+    <style>
+        .x-body.page-container {
+            margin: 0;
+            max-width: none;
+        }
+
+        .warehouse-table {
+            border: 1px solid #e6e6e6;
+        }
+
+        .warehouse-table th,
+        .warehouse-table td {
+            border: 1px solid #e6e6e6;
+        }
+    </style>
+    <div class="x-body page-container">
 <div class="layui-row">
                <form class="layui-form layui-col-md12 x-so" method="post">
             {{form.name}}
@@ -13,7 +28,7 @@
         </form>
       </div>
 
-      <table class="layui-table">
+      <table class="layui-table warehouse-table">
         <thead>
 
           <tr>
@@ -38,9 +53,7 @@
             <td>{{i.warehouse_supplier_name}}</td>
             <td class="td-manage">
 
-              <a title="删除" onclick="member_del(this,'{{i.warehouse_id}}')" href="javascript:;">
-                <i class="layui-icon">&#xe640;</i>
-              </a>
+              <a class="layui-btn layui-btn-xs layui-btn-danger" title="删除" onclick="member_del(this,'{{i.warehouse_id}}')" href="javascript:;">删除</a>
             </td>
           </tr>
          {% endfor %}
